--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -2743,6 +2743,8 @@
     <Content Include="Views\Theme\Default\Shared\_FileUploader.cshtml" />
     <Content Include="Scripts\jquery-3.5.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.5.1.min.map" />
+    <Content Include="Views\Theme\Default\SalesOrders\BatchPickersAssignment.cshtml" />
+    <Content Include="Views\Theme\Default\Order\_SalesOrdersBatchAssignment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
