added Country code to order and OrderProcess class and tables.

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1087,6 +1087,10 @@
     <Compile Include="Migrations\202009281303400_rebate-percentage-added-in-ProductAccountCodes.designer.cs">
       <DependentUpon>202009281303400_rebate-percentage-added-in-ProductAccountCodes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010011224279_added_ShippmentCountry_to_Orders_and_OrdersProcesses_tables.cs" />
+    <Compile Include="Migrations\202010011224279_added_ShippmentCountry_to_Orders_and_OrdersProcesses_tables.designer.cs">
+      <DependentUpon>202010011224279_added_ShippmentCountry_to_Orders_and_OrdersProcesses_tables.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2222,6 +2226,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202009281303400_rebate-percentage-added-in-ProductAccountCodes.resx">
       <DependentUpon>202009281303400_rebate-percentage-added-in-ProductAccountCodes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010011224279_added_ShippmentCountry_to_Orders_and_OrdersProcesses_tables.resx">
+      <DependentUpon>202010011224279_added_ShippmentCountry_to_Orders_and_OrdersProcesses_tables.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
