--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -57,9 +57,9 @@
     <!--connection strings for Development Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=IceStoneOrderingV1.2874;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Sattar Laptop-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP3;Initial Catalog=GanedataV1.2852;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
+    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP3;Initial Catalog=GanedataV1.2852;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Development PC-->
-    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=TheGelBottleLiveV1.2369;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=BecscoLiveV1.2340;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
     <!--connection strings for Naveed PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLSERVER2019;Initial Catalog=TheGelBottleLiveV1.3000; Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--Start connection string UMER PC-->
@@ -99,8 +99,8 @@
     <add key="elmah.mvc.route" value="elmah" />
     <add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
     <add key="ForceTls12" value="true" />
-    <add key="CurrencyLayerKey" value="da1ba6a72e8c978f3eea68144f8a41d3" />
-    <add key="ApiUrl" value="http://www.apilayer.net/api/live?source=" />
+    <add key="CurrencyLayerApiKey" value="da1ba6a72e8c978f3eea68144f8a41d3" />
+    <add key="CurrencyLayerApiUrl" value="http://www.apilayer.net/api/live?source=" />
     <add key="ImportCipherLabProductFilePath" value="C:\Users\sami\Desktop\Product Files to Import\CipherLabProductList.csv" />
     <add key="ImportScanSourceProductFilePath" value="C:\Users\sami\Desktop\Product Files to Import\ScanSourceProductFile.txt" />
     <add key="MerakiSecretKey" value="1d9399b50f91cf1672d709744e3d70b93083eb04" />
@@ -114,11 +114,11 @@
     <!--This meduim trust level is added here because devexpress reports were not printing and saving properly without specifying that-->
     <trust level="Full" />
     <!--Start session string Development-PC-->
-    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240" />-->
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240" />
     <!--Start session string Development-Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP2;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--Start session string Sattar-Laptop-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP3;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />
+    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP3;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--Start session string Naveed PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLSERVER2019;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--Start session string UMER PC-->
