--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1103,6 +1103,10 @@
     <Compile Include="Migrations\202010070815394_added-IsAutoShipment-field-to-ProductMaster-table.designer.cs">
       <DependentUpon>202010070815394_added-IsAutoShipment-field-to-ProductMaster-table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010091552246_Notes-field-added-in-OrderProcessDetails.cs" />
+    <Compile Include="Migrations\202010091552246_Notes-field-added-in-OrderProcessDetails.designer.cs">
+      <DependentUpon>202010091552246_Notes-field-added-in-OrderProcessDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2250,6 +2254,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010070815394_added-IsAutoShipment-field-to-ProductMaster-table.resx">
       <DependentUpon>202010070815394_added-IsAutoShipment-field-to-ProductMaster-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010091552246_Notes-field-added-in-OrderProcessDetails.resx">
+      <DependentUpon>202010091552246_Notes-field-added-in-OrderProcessDetails.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
