--- a/GaneEcommerce.Services/Ganedata.Core.Services.csproj
+++ b/GaneEcommerce.Services/Ganedata.Core.Services.csproj
@@ -346,6 +346,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountSectors\AccountSectorService.cs" />
+    <Compile Include="AccountSectors\IAccountSectorService.cs" />
     <Compile Include="Activity\ActivityServices.cs" />
     <Compile Include="Activity\IActivityServices.cs" />
     <Compile Include="Assets\AssetServices.cs" />
