Global tax types added to differ between account and products tax types

--- a/.gitignore
+++ b/.gitignore
@@ -343,3 +343,4 @@ healthchecksdb
 /WarehouseEcommerce/UploadedFiles/*
 /WarehouseEcommerce/ModelCache/*
 /GaneEcommerce.Data/binModelCache
+/WMS/Logs/*
