--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1115,6 +1115,10 @@
     <Compile Include="Migrations\202010151109481_added-ArchivableItemsAgeDays-to-TenantConfigs-table.designer.cs">
       <DependentUpon>202010151109481_added-ArchivableItemsAgeDays-to-TenantConfigs-table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010201313229_Tax-type-in-global-tax.cs" />
+    <Compile Include="Migrations\202010201313229_Tax-type-in-global-tax.designer.cs">
+      <DependentUpon>202010201313229_Tax-type-in-global-tax.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2271,6 +2275,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010151109481_added-ArchivableItemsAgeDays-to-TenantConfigs-table.resx">
       <DependentUpon>202010151109481_added-ArchivableItemsAgeDays-to-TenantConfigs-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010201313229_Tax-type-in-global-tax.resx">
+      <DependentUpon>202010201313229_Tax-type-in-global-tax.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
