added default price group to websites and fixes price calculations in ecommerce

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1123,6 +1123,10 @@
     <Compile Include="Migrations\202010201639171_added-order-update-notification-related-fields.designer.cs">
       <DependentUpon>202010201639171_added-order-update-notification-related-fields.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010231254567_added-PriceGroup-to-TenantWebsites-table.cs" />
+    <Compile Include="Migrations\202010231254567_added-PriceGroup-to-TenantWebsites-table.designer.cs">
+      <DependentUpon>202010231254567_added-PriceGroup-to-TenantWebsites-table.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2285,6 +2289,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010201639171_added-order-update-notification-related-fields.resx">
       <DependentUpon>202010201639171_added-order-update-notification-related-fields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010231254567_added-PriceGroup-to-TenantWebsites-table.resx">
+      <DependentUpon>202010231254567_added-PriceGroup-to-TenantWebsites-table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
