--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -55,7 +55,7 @@
   </location>
   <connectionStrings>
     <!--connection strings for Development Laptop-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=BecscoLiveV1.3000;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=IceStoneOrderingV1.2874;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
     <!--connection strings for Sattar Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP3;Initial Catalog=GanedataV1.2852;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Development PC-->
