--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1143,6 +1143,10 @@
     <Compile Include="Migrations\202010282251544_FoodOrderType-nullable-in-Orders.designer.cs">
       <DependentUpon>202010282251544_FoodOrderType-nullable-in-Orders.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010292213467_order-discount-added-in-invoice.cs" />
+    <Compile Include="Migrations\202010292213467_order-discount-added-in-invoice.designer.cs">
+      <DependentUpon>202010292213467_order-discount-added-in-invoice.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2320,6 +2324,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010282251544_FoodOrderType-nullable-in-Orders.resx">
       <DependentUpon>202010282251544_FoodOrderType-nullable-in-Orders.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010292213467_order-discount-added-in-invoice.resx">
+      <DependentUpon>202010292213467_order-discount-added-in-invoice.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
